--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "formik": "^2.2.0",
     "react": "^16.8.6",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.8.6",
