--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "formik": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
+    "react-d3-speedometer": "^0.14.1",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
